--- a/Exam_Practise/0_Exam_Practise.ipynb
+++ b/Exam_Practise/0_Exam_Practise.ipynb
@@ -493,6 +493,458 @@
     "print(library1)\n",
     "print(library2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uppgift 1 (3p)\n",
+    "Beskriv vad koden gör och vad som skrivs ut:\n",
+    "maträtter = [\"lasagne\", \"sushi\", \"hamburgare\"]\n",
+    "favoritmat = maträtter[0]\n",
+    "print(favoritmat[3])\n",
+    "Skriv en kort kommentar för varje rad."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1\n",
+    "\n",
+    "maträtter = [\"lasagne\", \"sushi\", \"hamburgare\"]\n",
+    "# skapar lista med maträtter\n",
+    "favoritmat = maträtter[0]\n",
+    "# skapar variabel för favoritmat, pekar på \"lasagne\"\n",
+    "print(favoritmat[3])\n",
+    "# skriver ut 3:e index i favoritmat, dvs \"a\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uppgift 2 (3p)\n",
+    "Skriv en funktion som tar in en bas och en höjd som inparametrar och som returnerar ytan av en\n",
+    "triangel.\n",
+    "Formeln för en triangels yta är:\n",
+    "A = 1/2 × bas × höjd\n",
+    "Låt användaren mata in en bas och en höjd och kör funktionen. Tänk på att ta med lämplig\n",
+    "felhantering."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2\n",
+    "\n",
+    "def triangel_area(width, height):\n",
+    "    try:\n",
+    "        width = float(width)\n",
+    "        height = float(height)\n",
+    "        \n",
+    "        if width < 0 or height < 0:\n",
+    "            return \"Enbart positiva tal.\"\n",
+    "        \n",
+    "        area = (1/2) * width * height\n",
+    "\n",
+    "        return f'Triangeln har ytan {area}.'\n",
+    "    \n",
+    "    except ValueError:\n",
+    "        return \"Felaktig inmatning. Ange enbart numeriska värden.\"\n",
+    "    \n",
+    "user_width = input(\"Skriv triangelns bas: \")\n",
+    "user_height = input(\"Skriv triangelns höjd.\")\n",
+    "\n",
+    "resultat = triangel_area(user_width, user_height)\n",
+    "print(f'Triangelns area är {resultat}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uppgift 3 (3p)\n",
+    "Simulera väderförhållandena för varje dag i ett år (365 dagar). Vädertyperna är \"soligt\",\n",
+    "\"molnigt\", \"regnigt\", \"snöigt\", och \"stormigt\".\n",
+    "Spara resultaten i en lämplig datastruktur och beräkna sedan antalet dagar för varje vädertyp."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'soligt': 73, 'molnigt': 65, 'regnigt': 80, 'snöigt': 73, 'stormigt': 74}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "väder_förhållanden = {\"soligt\": 0, \"molnigt\": 0, \"regnigt\": 0, \"snöigt\": 0, \"stormigt\": 0}\n",
+    "\n",
+    "for i in range(365):\n",
+    "    väder = random.choice(list(väder_förhållanden))\n",
+    "    väder_förhållanden[väder] += 1\n",
+    "\n",
+    "print(väder_förhållanden)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uppgift 4 (3p)\n",
+    "Skapa en funktion som tar in ett heltal n som parameter och skriver ut följande mönster, där 'x'\n",
+    "representerar en cell i den diagonala linjen och 'o' representerar en tom cell.\n",
+    "Exempel när n = 5:\n",
+    "x o o o o\n",
+    "o x o o o\n",
+    "o o x o o\n",
+    "o o o x o\n",
+    "o o o o x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4 - Kunde ej lösa\n",
+    "\n",
+    "def print_pattern(n):\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            print(\"x\", end=\" \")\n",
+    "            print(\"o\", end=\" \")\n",
+    "            \n",
+    "print_pattern(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uppgift 5 (4p)\n",
+    "Skapa en funktion som tar in en summa pengar i euro. Den ska printa ut en representation av\n",
+    "sedlar och mynt som representerar summan mellan 1 och 100 euro.\n",
+    "Valörer:\n",
+    "50 € sedel\n",
+    "20 € sedel\n",
+    "10 € sedel\n",
+    "5 € sedel\n",
+    "2 € mynt\n",
+    "1 € mynt\n",
+    "Exempel 87 ska ge:\n",
+    "50 € sedel: 1\n",
+    "20 € sedel: 1\n",
+    "10 € sedel: 1\n",
+    "5 € sedel: 1\n",
+    "2 € mynt: 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5\n",
+    "\n",
+    "def representera_summa(summa):\n",
+    "    femtio_euro = summa // 50\n",
+    "    summa %= 50\n",
+    "    \n",
+    "    tjugo_euro = summa // 20\n",
+    "    summa %= 20\n",
+    "    \n",
+    "    tio_euro = summa // 10\n",
+    "    summa %= 10\n",
+    "    \n",
+    "    fem_euro = summa // 5\n",
+    "    summa %= 5\n",
+    "    \n",
+    "    två_euro = summa // 2\n",
+    "    summa %= 2\n",
+    "    \n",
+    "    en_euro = summa\n",
+    "    \n",
+    "    print(f'50-euro: {femtio_euro}')\n",
+    "    print(f'20-euro: {tjugo_euro}')\n",
+    "    print(f'10-euro: {tio_euro}')\n",
+    "    print(f'5-euro: {fem_euro}')\n",
+    "    print(f'2-euro: {två_euro}')\n",
+    "    print(f'1-euro: {en_euro}')\n",
+    "    \n",
+    "print(representera_summa(87))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uppgift 6 (4p)\n",
+    "Du har följande kod:\n",
+    "class Litteratur:\n",
+    " def __init__(self, titel):\n",
+    " self.titel = titel\n",
+    " def __str__(self):\n",
+    " return f'Litteratur: \"{self.titel}\"'\n",
+    "class Bok(Litteratur):\n",
+    " def __str__(self):\n",
+    " return f'Bok: \"{self.titel}\"'\n",
+    "class Tidning(Litteratur):\n",
+    " def __str__(self):\n",
+    " return f'Tidning: \"{self.titel}\"'\n",
+    "class Tidskrift(Litteratur):\n",
+    " def __str__(self):\n",
+    " return f'Tidskrift: \"{self.titel}\"'\n",
+    "# TO-DO: implementera Bibliotekarie\n",
+    "class Bibliotekarie:\n",
+    " ...\n",
+    "# manuell test av Bibliotekarie\n",
+    "bib1 = Bibliotekarie(\"Erik\", böcker=[\"Sagan om Ringen\", \"Hobbiten\"],\n",
+    "tidningar=[\"Dagens Nyheter\"], tidskrifter=[\"Nature\"])\n",
+    "bib2 = Bibliotekarie(\"Anna\", böcker=[\"Moby Dick\"],\n",
+    "tidskrifter=[\"Science\"])\n",
+    "print(bib1)\n",
+    "print(bib2)\n",
+    "Implementera Bibliotekarie klassen så att du får liknande utskrift som nedan med det manuella\n",
+    "testet:\n",
+    "Erik ansvarar för:\n",
+    "[Bok: \"Sagan om Ringen\", Bok: \"Hobbiten\"]\n",
+    "[Tidning: \"Dagens Nyheter\"]\n",
+    "[Tidskrift: \"Nature\"]\n",
+    "Anna ansvarar för:\n",
+    "[Bok: \"Moby Dick\"]\n",
+    "[Tidskrift: \"Science\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6\n",
+    "\n",
+    "class Litteratur:\n",
+    "    def __init__(self, titel):\n",
+    "        self.titel = titel\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f'Litteratur: {self.titel}'\n",
+    "    \n",
+    "class Bok(Litteratur):\n",
+    "    def str(self):\n",
+    "        return f'Bok: {self.titel}'\n",
+    "    \n",
+    "class Tidning(Litteratur):\n",
+    "    def str(self):\n",
+    "        return f'Tidning: {self.titel}'\n",
+    "    \n",
+    "class Tidskrift(Litteratur):\n",
+    "    def str(self):\n",
+    "        return f'Tidskrift: {self.titel}'\n",
+    "    \n",
+    "class Bibliotekarie:\n",
+    "    def __init__(self, namn, böcker, tidningar, tidskrifter):\n",
+    "        self.namn = namn\n",
+    "        self.böcker = [Bok(bok) for bok in (böcker or [])]\n",
+    "        self.tidningar = [Tidning(tidning) for tidning in (tidningar or [])]\n",
+    "        self.tidskrifter = [Tidskrift(tidskrift) for tidskrift in (tidskrifter or [])]\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return f'{self.name} ansvarar för: \\n{self.böcker}\\n{self.tidningar}\\n{self.tidskrifter}'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o x x x x \n",
+      "x o x x x \n",
+      "x x o x x \n",
+      "x x x o x \n",
+      "x x x x o \n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_pattern(n):\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if i != j:\n",
+    "                print('x', end=\" \")\n",
+    "            else:\n",
+    "                print('o', end=\" \")\n",
+    "        print()  # Skriv ut en ny rad efter varje rad i mönstret\n",
+    "\n",
+    "print_pattern(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o o o o x \n",
+      "o o o x o \n",
+      "o o x o o \n",
+      "o x o o o \n",
+      "x o o o o \n"
+     ]
+    }
+   ],
+   "source": [
+    "def inverted_diagonal(n):\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if j == n - i - 1:\n",
+    "                print('x', end=' ')\n",
+    "            else:\n",
+    "                print('o', end=' ')\n",
+    "        print()\n",
+    "        \n",
+    "inverted_diagonal(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x x x x x \n",
+      "x o o o x \n",
+      "x o o o x \n",
+      "x o o o x \n",
+      "x x x x x \n"
+     ]
+    }
+   ],
+   "source": [
+    "def frame(n):\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if i == 0 or i == n-1 or j == 0 or j == n-1:\n",
+    "                print('x', end=' ')\n",
+    "            else:\n",
+    "                print('o', end=' ')\n",
+    "        print()\n",
+    "\n",
+    "frame(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x o x o x \n",
+      "o x o x o \n",
+      "x o x o x \n",
+      "o x o x o \n",
+      "x o x o x \n"
+     ]
+    }
+   ],
+   "source": [
+    "def chess_board(n):\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if (i + j) % 2 == 0:\n",
+    "                print('x', end=' ')\n",
+    "            else:\n",
+    "                print('o', end=' ')\n",
+    "        print()\n",
+    "\n",
+    "chess_board(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    x\n",
+      "   xxx\n",
+      "  xxxxx\n",
+      " xxxxxxx\n",
+      "xxxxxxxxx\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pyramid(n):\n",
+    "    for i in range(1, n + 1):\n",
+    "        print(' ' * (n - i) + 'x' * (2 * i - 1))\n",
+    "        \n",
+    "pyramid(5)"
+   ]
   }
  ],
  "metadata": {
