Exam practise/solutions

--- a/Exam_Practise/01_Exam_Practise.ipynb
+++ b/Exam_Practise/01_Exam_Practise.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Volymen av cylindern är: 392.69908169872417\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -52,17 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Arean av cylindern är: 188.4955592153876\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -99,17 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sfärens area är 62.83185307179586\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -145,17 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[166921, 166454, 166761, 166953, 166143, 166768]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -178,18 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'krona': 249946, 'klave': 250054}\n",
-      "['krona', 'klave']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -253,21 +212,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 3 4 5 \n",
-      "2 4 6 8 10 \n",
-      "3 6 9 12 15 \n",
-      "4 8 12 16 20 \n",
-      "5 10 15 20 25 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def print_pattern(n):\n",
     "    for i in range(1, n + 1):\n",
@@ -295,20 +242,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tusenlapp: 3\n",
-      "Tvåhundralapp: 1\n",
-      "Tiokrona: 1\n",
-      "Enkrona: 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def representera_summa(summa):\n",
     "    tusenlappar = summa // 1000\n",
@@ -342,22 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100-dollar = 5\n",
-      "50-dollar = 1\n",
-      "20-dollar = 0\n",
-      "10-dollar = 1\n",
-      "5-dollar = 1\n",
-      "1-dollar = 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def representera_summa(summa):\n",
     "    hundra_dollar = summa // 100\n",
@@ -389,22 +312,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ada owns:\n",
-      "[Dog: Snoopy, Dog: Pluto]\n",
-      "[Fish: Fishy, Fish: Buppy]\n",
-      "Beda owns:\n",
-      "[Dog: Barkly]\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Animal:\n",
     "    def __init__(self, name):\n",
@@ -438,24 +348,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Library has: \n",
-      "Books: ['Harry Potter', 'Lord of the Rings', 'Stormlight Archives'] \n",
-      "Movies: ['Inception', 'Matrix', 'Star Wars']\n",
-      "\n",
-      "Library has: \n",
-      "Books: [] \n",
-      "Movies: ['Wizard of Oz']\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Library:\n",
     "    def __init__(self, books, movies):\n",
@@ -607,17 +502,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'soligt': 73, 'molnigt': 65, 'regnigt': 80, 'snöigt': 73, 'stormigt': 74}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3\n",
     "\n",
@@ -803,21 +690,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "o x x x x \n",
-      "x o x x x \n",
-      "x x o x x \n",
-      "x x x o x \n",
-      "x x x x o \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def print_pattern(n):\n",
     "    for i in range(n):\n",
@@ -833,21 +708,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "o o o o x \n",
-      "o o o x o \n",
-      "o o x o o \n",
-      "o x o o o \n",
-      "x o o o o \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def inverted_diagonal(n):\n",
     "    for i in range(n):\n",
@@ -863,21 +726,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x x x x x \n",
-      "x o o o x \n",
-      "x o o o x \n",
-      "x o o o x \n",
-      "x x x x x \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def frame(n):\n",
     "    for i in range(n):\n",
@@ -893,21 +744,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x o x o x \n",
-      "o x o x o \n",
-      "x o x o x \n",
-      "o x o x o \n",
-      "x o x o x \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def chess_board(n):\n",
     "    for i in range(n):\n",
@@ -923,27 +762,376 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    x\n",
-      "   xxx\n",
-      "  xxxxx\n",
-      " xxxxxxx\n",
-      "xxxxxxxxx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def pyramid(n):\n",
     "    for i in range(1, n + 1):\n",
     "        print(' ' * (n - i) + 'x' * (2 * i - 1))\n",
     "        \n",
     "pyramid(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Testing my solution from the exam, task 5\n",
+    "\n",
+    "ental = {\n",
+    "    1: \"ett\",\n",
+    "    2: \"två\",\n",
+    "    3: \"tre\",\n",
+    "    4: \"fyra\",\n",
+    "    5: \"fem\",\n",
+    "    6: \"sex\",\n",
+    "    7: \"sju\",\n",
+    "    8: \"åtta\",\n",
+    "    9: \"nio\"\n",
+    "}\n",
+    "\n",
+    "tiotal = {\n",
+    "    1: \"tio\",\n",
+    "    2: \"tjugo\",\n",
+    "    3: \"trettio\",\n",
+    "    4: \"fyrtio\",\n",
+    "    5: \"femtio\",\n",
+    "    6: \"sextio\",\n",
+    "    7: \"sjuttio\",\n",
+    "    8: \"åttio\",\n",
+    "    9: \"nittio\"\n",
+    "}\n",
+    "\n",
+    "def returnera_summa(heltal):\n",
+    "    try:\n",
+    "        heltal = int(heltal)\n",
+    "        \n",
+    "        if heltal < 0 or heltal > 9999:\n",
+    "            return \"Ange ett positivt heltal mellan 0 och 9999.\"\n",
+    "        \n",
+    "        heltal_sträng = \"\"\n",
+    "        \n",
+    "        # 9999\n",
+    "        \n",
+    "        if heltal > 999:\n",
+    "            heltal_sträng += ental[heltal[0]] + \"tusen\"\n",
+    "            if heltal[1] != 0:\n",
+    "                heltal_sträng += ental[heltal[1]] + \"hundra\"\n",
+    "            if heltal[2] != 0:\n",
+    "                heltal_sträng += tiotal[heltal[2]]\n",
+    "            if heltal[3] != 0:\n",
+    "                heltal_sträng += ental[heltal[3]]\n",
+    "        \n",
+    "        # 999\n",
+    "        \n",
+    "        elif heltal > 99:\n",
+    "            heltal_sträng += ental[heltal[0]] + \"hundra\"\n",
+    "            if heltal[1] != 0:\n",
+    "                heltal_sträng += tiotal[heltal[1]]\n",
+    "            if heltal[2] != 0:\n",
+    "                heltal_sträng += ental[heltal[2]]\n",
+    "              \n",
+    "        # 99     \n",
+    "                \n",
+    "        elif heltal > 9:\n",
+    "            heltal_sträng += tiotal[heltal[0]]\n",
+    "            if heltal[1] != 0:\n",
+    "                heltal_sträng += ental[heltal[1]]\n",
+    "        \n",
+    "        # 9\n",
+    "        \n",
+    "        else:\n",
+    "            if heltal != 0:\n",
+    "                heltal_sträng = ental[heltal[3]]\n",
+    "            else:\n",
+    "                heltal_sträng = \"noll\"  \n",
+    "          \n",
+    "    except ValueError:\n",
+    "        return \"Felaktig inmatning. Enbart numeriska siffror (mellan 0 och 9999)\"\n",
+    "    \n",
+    "summa1 = returnera_summa(255)\n",
+    "print(summa1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "x = np.linspace(0, 2 * np.pi, 100)\n",
+    "y = np.sin(x)\n",
+    "\n",
+    "plt.plot(x, y)\n",
+    "plt.title(\"Simple Sin Wave\")\n",
+    "plt.xlabel(\"x-values\")\n",
+    "plt.ylabel(\"y-values\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(0, 2 * np.pi, 100)\n",
+    "y1 = np.sin(x)\n",
+    "y2 = np.cos(x)\n",
+    "\n",
+    "plt.plot(x, y1, label=\"sin(x)\")\n",
+    "plt.plot(x, y2, label=\"cos(x)\")\n",
+    "plt.title(\"Sin and Cos Waves\")\n",
+    "plt.xlabel(\"x-values\")\n",
+    "plt.ylabel(\"y-values\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "days = [\"Mån\", \"Tis\", \"Ons\", \"Tor\", \"Fre\"]\n",
+    "cups_of_coffee = [1, 2, 4, 8, 16]\n",
+    "plt.bar(days, cups_of_coffee, color=\"red\")\n",
+    "plt.title(\"Kaffekonsumtion under studieveckan\")\n",
+    "plt.ylabel(\"Antal kaffe koppar\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uppgift 2\n",
+    "\n",
+    "import math\n",
+    "def klot_volym(radie):\n",
+    "    try:\n",
+    "        radie = float(radie)    # Omvandla från string till float\n",
+    "        if radie < 0:\n",
+    "            return \"Radien måste vara ett positivt tal\"\n",
+    "        \n",
+    "        volym = (4/3) * math.pi * (radie**2)\n",
+    "        return f\"Klotets volym: {volym}\"\n",
+    "    \n",
+    "    except ValueError:\n",
+    "        return \"Felaktig inmatning. Enbart numeriska värden.\"\n",
+    "    \n",
+    "user_radie = input(\"Ange klotets radie:\")\n",
+    "print(klot_volym(user_radie))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# # # # # \n",
+      "# 0 0 0 # \n",
+      "# # 0 0 # \n",
+      "# # # 0 # \n",
+      "# # # # # \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Uppgift 3\n",
+    "\n",
+    "def skriv_ut_mönster(n):\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if i == 0 or i == n-1 or j == 0 or j == n-1 or i > j:\n",
+    "                print(\"#\", end=\" \") # end lägger till en space efter \"#\"\n",
+    "            else:\n",
+    "                print(\"0\", end=\" \")\n",
+    "        print() # Lägg till rad\n",
+    "                \n",
+    "skriv_ut_mönster(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Uppgift 4\n",
+    "\n",
+    "Det kommer skrivas ut:\n",
+    "\n",
+    "\"Person säger hej\"  \n",
+    "\"Student säger hej\"  \n",
+    "\"Person säger hej\"  \n",
+    "\n",
+    "Motivering:\n",
+    "\n",
+    "1. Vi har tre klasser: Person (huvudklass), Student (underklass), Viking (underklass)\n",
+    "2. Student och Viking **ärver** från Person\n",
+    "3. Student skriver över \"hej\" metoden\n",
+    "4. Viking ärver \"hej\" metoden från Person, eftersom den inte har en egen\n",
+    "5. I for-loopen skapas tre objekt (personer), en för varje klass, där varje objekt anropar \"hej\" metoden. \"hoy\" metoden kommer aldrig skrivas ut då den ej anropas.\n",
+    "6. Första objektet, Person(), skriver ut sin egen \"hej\" metod\n",
+    "7. Andra objektet, Student(), skriver ut sin egen \"hej\" metod\n",
+    "8. Sista objektet, Viking(), skriver ut \"hej\" metoden som den ärver av Person klassen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "åttatusenåttahundraåttioåtta\n",
+      "etthundraett\n",
+      "noll\n",
+      "elva\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Uppgift 5\n",
+    "\n",
+    "ental = {\n",
+    "    1: \"ett\",\n",
+    "    2: \"två\",\n",
+    "    3: \"tre\",\n",
+    "    4: \"fyra\",\n",
+    "    5: \"fem\",\n",
+    "    6: \"sex\",\n",
+    "    7: \"sju\",\n",
+    "    8: \"åtta\",\n",
+    "    9: \"nio\"\n",
+    "}\n",
+    "\n",
+    "elva_till_nitton = {\n",
+    "    11: \"elva\",\n",
+    "    12: \"tolv\",\n",
+    "    13: \"tretton\",\n",
+    "    14: \"fjorton\",\n",
+    "    15: \"femton\",\n",
+    "    16: \"sexton\",\n",
+    "    17: \"sjutton\",\n",
+    "    18: \"arton\",\n",
+    "    19: \"nitton\"\n",
+    "}\n",
+    "\n",
+    "tiotal = {\n",
+    "    1: \"tio\",\n",
+    "    2: \"tjugo\",\n",
+    "    3: \"trettio\",\n",
+    "    4: \"fyrtio\",\n",
+    "    5: \"femtio\",\n",
+    "    6: \"sextio\",\n",
+    "    7: \"sjuttio\",\n",
+    "    8: \"åttio\",\n",
+    "    9: \"nittio\"\n",
+    "}\n",
+    "\n",
+    "hundratal = {\n",
+    "    1: \"etthundra\",\n",
+    "    2: \"tvåhundra\",\n",
+    "    3: \"trehundra\",\n",
+    "    4: \"fyrahundra\",\n",
+    "    5: \"femhundra\",\n",
+    "    6: \"sexhundra\",\n",
+    "    7: \"sjuhundra\",\n",
+    "    8: \"åttahundra\",\n",
+    "    9: \"niohundra\"\n",
+    "}\n",
+    "\n",
+    "tusental = {\n",
+    "    1: \"etttusen\",\n",
+    "    2: \"tvåtusen\",\n",
+    "    3: \"tretusen\",\n",
+    "    4: \"fyrtusen\",\n",
+    "    5: \"femtusen\",\n",
+    "    6: \"sextusen\",\n",
+    "    7: \"sjutusen\",\n",
+    "    8: \"åttatusen\",\n",
+    "    9: \"niotusen\"\n",
+    "}\n",
+    "\n",
+    "def representera_heltal(heltal):\n",
+    "    try:\n",
+    "        heltal = int(heltal)    # Omvandla string (input) till int\n",
+    "        if heltal < 0 or heltal > 9999:\n",
+    "            return \"Heltalet måste vara mellan 0 - 9999\"\n",
+    "        \n",
+    "        heltal_sträng = \"\"\n",
+    "\n",
+    "        if heltal == 0:\n",
+    "            heltal_sträng = \"noll\"\n",
+    "        \n",
+    "        else:\n",
+    "            \"\"\"\n",
+    "            // avrundar nedåt (heltalsdivision)\n",
+    "            %= ger resten (tar modulus och uppdaterar värdet)\n",
+    "            Ex. heltal = 2500\n",
+    "            (heltal // 1000) == 2 (2 får plats två gånger i 2500)\n",
+    "            (heltal %= 1000) == 500 (500 kvarstår)\n",
+    "            \n",
+    "            If satserna kollar så att resultatet (t.ex tusen) finns i den dictionaryn. \n",
+    "            Det är viktigt för att undvika problem ifall det finns t.ex nollor i heltalet, eftersom man inte nämner noll i ett tal (t.ex 101 är ju inte hundranollett, bara hundraett)    \n",
+    "            \"\"\"      \n",
+    "            \n",
+    "            # Tusental\n",
+    "            tusen = heltal // 1000\n",
+    "            if tusen in tusental:\n",
+    "                heltal_sträng += tusental[tusen]        \n",
+    "            heltal %= 1000\n",
+    "            \n",
+    "            # Hundratal\n",
+    "            hundra = heltal // 100\n",
+    "            if hundra in hundratal:\n",
+    "                heltal_sträng += hundratal[hundra]        \n",
+    "            heltal %= 100\n",
+    "            \n",
+    "            # Kollar ifall heltal är mellan 11 - 19, eftersom det är specialtal\n",
+    "            if heltal > 10 and heltal <= 19:                    \n",
+    "                heltal_sträng += elva_till_nitton[heltal]\n",
+    "            else:\n",
+    "                # Tiotal\n",
+    "                tio = heltal // 10\n",
+    "                if tio in tiotal:\n",
+    "                    heltal_sträng += tiotal[tio]        \n",
+    "                heltal %= 10\n",
+    "                \n",
+    "                # Ental (skippar ifall det är en nolla i slutet)\n",
+    "                ental_siffra = heltal\n",
+    "                if ental_siffra != 0:\n",
+    "                    heltal_sträng += ental[ental_siffra]\n",
+    "                \n",
+    "        return heltal_sträng\n",
+    "        \n",
+    "    except ValueError:\n",
+    "        return \"Ange enbart siffror (mellan 0 och 9999)\"\n",
+    "    \n",
+    "summa1 = representera_heltal(8888)\n",
+    "summa2 = representera_heltal(101)\n",
+    "summa3 = representera_heltal(0)\n",
+    "summa4 = representera_heltal(11)\n",
+    "\n",
+    "print(summa1)\n",
+    "print(summa2)\n",
+    "print(summa3)\n",
+    "print(summa4)"
    ]
   }
  ],
